# transformer_torch

./: .gitignore  pyproject.toml  requirements.txt
sentiment_lm_torch/: benchmark.py  benchmark_cache.py  dataset.py  inference.py  scheduler.py  tokenizer.py  train.py  utils.py
sentiment_lm_torch/config/: config.yaml
sentiment_lm_torch/config/dataset/: yelp.yaml
sentiment_lm_torch/config/model/: small.yaml  tiny.yaml
sentiment_lm_torch/config/optimizer/: adamw.yaml
sentiment_lm_torch/config/scheduler/: cosine.yaml
sentiment_lm_torch/config/vocab/: yelp.yaml
sentiment_lm_torch/model/: attention.py  embeddings.py  feed_forward.py  positional_embeddings.py  test_inference.py  transformer.py  util.py
sentiment_lm_torch/preprocess/: pretokenize.py  yelp_test_split.py
sentiment_lm_torch/rl/: metta_utils.py  rl.py
