[project]
name = "sentiment-lm-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "more-itertools>=10.6.0",
    "numpy>=2.2.2",
    "rich>=13.9.4",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "wandb>=0.19.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentiment_lm_torch"]
